# tomografo

./: CMakeLists.txt  Field.sif  README.md  VxI gem (com log).py  W_input_gain.cpp  alterado por daniel.py  attenuation.txt  attenuation_copper.txt  attenuation_kapton.txt  checkfield.cpp  efficiency.cpp  espectro.ipynb  full_gain.cpp  gain.cpp  input_gain.cpp  input_gain_old.cpp  macro2.cpp  macro_gain.cpp  photon.cpp  photon_W.cpp  photon_att.cpp  photon_gain.cpp  picoamperimetro.py  standard_GEM.geo  test2.py  teste10.py  teste12.py  teste5.py  teste6.py  totalsignals.cpp
